--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,11 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     // https://mvnrepository.com/artifact/org.postgresql/postgresql
     implementation 'org.postgresql:postgresql:42.3.1'
-    implementation 'io.javalin:javalin:4.3.0'
-    implementation 'org.slf4j:slf4j-simple:1.7.31'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
+    implementation group: 'io.javalin', name: 'javalin', version: '4.3.0'
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.8.0-beta4'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.4'
+
+    implementation 'com.google.guava:guava:30.1.1-jre'
 }
 
 test {
